--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+#Conf
+server.port=9000
+conf.filter.excludedurls=/v2/api-docs,/swagger-resources,/swagger-resources/**,/configuration/ui,/configuration/**,/configuration/security,/swagger-ui.html,/webjars/**,/v3/api-docs/**,/swagger-ui/**,/swagger-ui/,/swagger-ui
 
+#Token
+conf.token.secretkey="mysecret"
