--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,11 @@ conf.filter.excludedurls=/v2/api-docs,/swagger-resources,/swagger-resources/**,/
 
 #Token
 conf.token.secretkey="mysecret"
+
+#Mongo
+#Mongo container name
+spring.data.mongodb.host=mongo-posts
+spring.data.mongodb.port=27017
+spring.data.mongodb.database=posts-db
+spring.data.mongodb.username=root
+spring.data.mongodb.password=rootpassword
